SERVER-68196 Fix broken assertion in BoundedSorter